# toy

./: .clang-format  .gitignore  CMakeLists.txt  DISCLAIMER.md  Doxyfile.in  README.CN.md  README.md
cmake/: configure_doxyfile.cmake
grammar/: toy.l  toy.y
include/parser/: Lexer.h  Syntax.h  SyntaxKind.h  SyntaxNode.h  Token.h  TokenKind.h  TriviaKind.h  lexer.h
include/text/: SourceLocation.h
include/util/: Hash.h  Util.h
scripts/: Syntax.templ  SyntaxKind.templ  TokenKind.cpp  TokenKind.templ  TokenKind.txt  TokenKind_impl.templ  TriviaKind.cpp  TriviaKind.templ  TriviaKind.txt  TriviaKind_impl.templ  syntax.yaml  syntax_gen.py
src/: common.h
src/ast/: BaseAST.h  CompUnitAST.h  ast.h
src/grammar/: FlexLexer.hh  Scanner.hh
src/parser/: Lexer.cpp  Parser.cpp  Syntax.cpp  Token.cpp  TokenKind.cpp  TriviaKind.cpp  lexer.cpp
src/text/: SourceLocation.cpp
src/unittests/: unittests.cpp
src/unittests/parser/: TestLexer.cpp
tests/basic01/: basic01.toy
